--- a/kotlin-essencial.html
+++ b/kotlin-essencial.html
@@ -1738,7 +1738,7 @@ A alternativa a essa estrutura é a função <a href="https://kotlinlang.org/api
 <div class="sect2">
 <h3 id="_objetivos"><a class="link" href="#_objetivos">Objetivos</a></h3>
 <div class="paragraph">
-<p>Buscamos alcançar os seguites objetivos com este material:</p>
+<p>Buscamos alcançar os seguintes objetivos com este material:</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
@@ -1754,7 +1754,7 @@ A alternativa a essa estrutura é a função <a href="https://kotlinlang.org/api
 </ol>
 </div>
 <div class="paragraph">
-<p>Para isso, estabelecemos os seguintes requisitos:</p>
+<p>Para isso, estabelecemos os requisitos:</p>
 </div>
 <div class="ulist">
 <ul>
