--- a/kotlin-essencial.html
+++ b/kotlin-essencial.html
@@ -21,8 +21,9 @@ code, pre {
 	content: "\1F9EA";
 }
 
-div#license {
+div#license > p {
         font-family: 'Fira Sans', sans-serif;
+        padding: 0.5em;
 }
 
 </style>
@@ -1816,10 +1817,6 @@ A alternativa a essa estrutura é a função <a href="https://kotlinlang.org/api
 </div>
 </div>
 </div>
-<div id="footer">
-<div id="footer-text">
-</div>
-</div>
 <style>
 pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -1897,8 +1894,9 @@ pre.pygments .tok-vm { color: #003333 } /* Name.Variable.Magic */
 pre.pygments .tok-il { color: #FF6600 } /* Literal.Number.Integer.Long */
 </style>
 <div id="license">
-<!-- License: Creative Commons -->
-<p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://mcrisc.github.io/kotlin-essencial/">Kotlin Essencial</a> by <span property="cc:attributionName">Marcelo Criscuolo</span> is licensed under <a href="http://creativecommons.org/licenses/by-nc/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1"></a></p>
+        <hr>
+        <!-- License: Creative Commons -->
+        <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://mcrisc.github.io/kotlin-essencial/">Kotlin Essencial</a> by <span property="cc:attributionName">Marcelo Criscuolo</span> is licensed under <a href="http://creativecommons.org/licenses/by-nc/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1"></a></p>
 </div>
 </body>
 </html>
