--- a/kotlin-essencial.html
+++ b/kotlin-essencial.html
@@ -1739,7 +1739,7 @@ A alternativa a essa estrutura é a função <a href="https://kotlinlang.org/api
 <div class="sect2">
 <h3 id="_objetivos"><a class="link" href="#_objetivos">Objetivos</a></h3>
 <div class="paragraph">
-<p>Buscamos alcançar os seguintes objetivos com este material:</p>
+<p>Estabelecemos os seguintes objetivos para este material:</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
@@ -1750,12 +1750,12 @@ A alternativa a essa estrutura é a função <a href="https://kotlinlang.org/api
 <p>Ser informativo.</p>
 </li>
 <li>
-<p>Permitir que o leitor pratique o uso da linguagem Kotlin assim que começar a leitura.</p>
+<p>Permitir que o leitor comece a praticar assim que iniciar a leitura.</p>
 </li>
 </ol>
 </div>
 <div class="paragraph">
-<p>Para isso, estabelecemos os requisitos:</p>
+<p>Para atingir estes objetivos, estabelecemos os requisitos:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -1772,7 +1772,7 @@ A alternativa a essa estrutura é a função <a href="https://kotlinlang.org/api
 <p>Aproveitar o conhecimento do leitor sobre Java. (É um material para quem conhece Java.)</p>
 </li>
 <li>
-<p>Conter exercícios.</p>
+<p>Propor exercícios.</p>
 </li>
 </ul>
 </div>
