--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0;url=kotlin-essencial.html">
+    <meta name="description" content="Uma introdução rápida à Linguagem Kotlin para programadores Java">
 
     <title>Kotlin Essencial</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GDGTT4VDF4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-GDGTT4VDF4');
+    </script>
+
   </head>
 
   <body>
